--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="m-3">
   <h1>Daftar Buah</h1>
 
-  <table class="table" id="daftar-buah">
+  <table class="table table-striped" id="daftar-buah">
     <thead>
       <tr>
         <th scope="col">#</th>
