--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <h1>Daftar Buah</h1>
 
   <table class="table table-striped table-bordered" id="daftar-buah">
-    <thead>
+    <thead class="table-dark">
       <tr>
         <th scope="col">#</th>
         <th scope="col">Nama Buah</th>
