menambah fungsi ubah data buah

--- a/index.html
+++ b/index.html
@@ -56,9 +56,11 @@
           await hapusBuah($(this).attr('data'))
         location.reload()
         }
-        
       })
       
+      $(".link-ubah").click(async function(){
+        location.replace('formubah.html?id=' + $(this).attr('data'))
+      })
     })
    </script>
  
